--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/package.json
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.2.0",
     "json-server": "^0.17.3",
     "json-server-auth": "^2.1.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
